--- a/MyNote/src/main/resources/templates/login.html
+++ b/MyNote/src/main/resources/templates/login.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyNote我的筆記-登入</title>
-    <!-- 載入 Tailwind CSS CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <!-- 載入 Inter 字體 -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+	<!-- 載入本地Tailwind CSS -->
+    <link href="/tailwind.min.css" rel="stylesheet">
     <style>
-        /* 確保全域使用 Inter 字體 */
-        body {
-            font-family: 'Inter', sans-serif;
-        }
+		/* 載入.使用本地字體 */
+		@font-face {
+		  font-family: 'Inter';
+		  src: url('/Inter_18pt-Regular.ttf') format('truetype');
+		  font-weight: 400;
+		  font-style: normal;
+		}
+		/* 全域使用字體 */
+		body {
+		    font-family: 'Inter', sans-serif;
+			font-weight: 400;
+		}
         /* 隱藏捲軸，保持介面簡潔 */
         .hide-scrollbar::-webkit-scrollbar {
             display: none;
