--- a/MyNote/src/main/resources/templates/notes.html
+++ b/MyNote/src/main/resources/templates/notes.html
@@ -52,8 +52,11 @@
 
         // 登入
 		window.onload = function() {
+			//測試用userId=101
+			localStorage.setItem('user', JSON.stringify({ id: 101 }));
+			
 		    const user = JSON.parse(localStorage.getItem('user'));
-		    let notes = [];
+		    //let notes = [];
 
 			// 登入失敗→跳回登入頁
 		    if (!user) {
@@ -62,7 +65,7 @@
 		    }
 
 		    // 登入成功→呼叫後端 API
-		    fetch("http://localhost:8080/api/notes")
+		    fetch("http://localhost:8080/api/notes?userId=" + user.id)
 		        .then(res => res.json())
 		        .then(data => {
 		            notes = data;   // 後端回傳的 JSON 塞進 notes
@@ -111,7 +114,7 @@
         // 創建新筆記
         function createNote() {
             const newNote = {
-                id: Date.now(),
+				userId: user.id,
                 title: '無標題筆記',
                 content: '',
                 createdAt: getTodayString(),
