--- a/MyNote/src/main/resources/templates/login.html
+++ b/MyNote/src/main/resources/templates/login.html
@@ -67,13 +67,13 @@
             
             if (inputElement.value.trim() && passwordElement.value) {
                 //登入成功
-                const user = { id: 'u1', username: inputElement.value.trim() };
+                const user = { id: 101, username: inputElement.value.trim() };
                 
                 // 將使用者資訊存入 localStorage 以便在 notes.html 使用
                 localStorage.setItem('user', JSON.stringify(user));
 
                 // 跳轉到筆記頁面
-				window.location.href = '/notes';
+				window.location.href = "/notes?userId=" + user.id;
             } else {
                 alert('請輸入帳號和密碼。');
             }
